page5 is complete and corrected renderserver error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,6 +143,7 @@ form input::placeholder {
 
 /** Content stylings starts */
 .main-content {
+    margin-top: 99px;
     flex: 1;
     padding: 20px;
 }
