--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,7 @@ nav ul li a {
         color: black;
         border: 2px solid #fff;
     }
+
 }
 
 /* stylings for the form */
@@ -168,7 +169,17 @@ form input::placeholder {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     white-space: pre-wrap;
 }
-pre{
+
+.page-btn {
+    padding-left: 90px;
+    padding-right: 90px;
+    border-radius: 25px;
+    background-color: #a7c0fa;
+    color: black;
+    border: 2px solid #fff;
+}
+
+pre {
     background-color: lightgray;
     border: 2px solid #ddd;
     text-align: left;
@@ -181,6 +192,7 @@ pre{
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     white-space: pre-wrap;
 }
+/* container hover-boder effect */
 .cont:hover {
     border: 2px solid #333;
 }
